src/Components/scaleDisplay.css
.note-card {
    /* width: 100px;
    height: 100px; */
    width: clamp(40px, 8vw, 100px);
    height: clamp(40px, 8vw, 100px);
    aspect-ratio: 1/1;
    border-radius: 5px;
    transition: 
        transform ease-in-out .07s,
        background-color ease .03s;
}

.note-text {
    font-size: 2.5rem;
    color: lightblue;
}

.note-card.current {
    transform: scale(1.3);
}

